--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -456,7 +456,7 @@ A ``fast'' version of the grid calculation algorithm was built by combining both
 
 \subsection{Performance on the adsorption equilibrium}
 
-When considering the performance of this new grid sampling algorithm in comparison to previously introduced sampling algorithms, the utilization of this new sampling technique on the CoRE MOF 2019 database proves to be highly advantageous due to its accuracy and speed. The efficient time performance of the grid sampling on the structures within the CoRE MOF 2019 database can be attributed to the relatively small porosity of the materials and their high degree of symmetry. For example, the average void fraction for a \SI{1.2}{\angstrom} probe radius is equal to $0.16$, while the average number of symmetric images is $5.8$ (most MOFs present symmetry operations). As a result of the ``blocking'' procedure, only approximately {$\sim$16\%} of the grid points necessitate actual calculation on average. Additionally, the ``symmetry'' procedure ensures that only around {$\sim$17\%} of points need to be considered. The combination of both procedures significantly reduces the number of relevant points to merely {2.7\%} of the grid. This reduction substantially decreases the CPU time required for the calculation while maintaining a satisfactory level of accuracy (with a low error on the Xe adsorption enthalpy of \SI{0.014}{\kilo\joule\per\mole}) compared to the naive grid approach, as shown in Table~\ref{tab:grid}. With the blocking procedure in the grid simulation, the time required is reduced by {$\sim$70.6\%} when compared to the naive approach, and a similar reduction of {$\sim$76.6\%} is observed for the symmetry-aware grid sampling. By combining both simplifications, the fast grid sampling technique achieves a time reduction of nearly {$\sim$91.6\%} for a grid spacing of \SI{0.12}{\angstrom}, aligning with the aforementioned decreased number of sampled points.
+When considering the performance of this new grid sampling algorithm in comparison to previously introduced sampling algorithms, the utilization of this new sampling technique on the CoRE MOF 2019 database proves to be highly advantageous due to its accuracy and speed. The efficient time performance of the grid sampling on the structures within the CoRE MOF 2019 database can be attributed to the relatively small porosity of the materials and their high degree of symmetry. For example, the average void fraction for a \SI{1.2}{\angstrom} probe radius is equal to $0.16$, while the average number of symmetric images is $5.8$ (most MOFs present symmetry operations). As a result of the ``blocking'' procedure, only approximately {16\%} of the grid points necessitate actual calculation on average. Additionally, the ``symmetry'' procedure ensures that only around {17\%} of points need to be considered. The combination of both procedures significantly reduces the number of relevant points to merely {2.7\%} of the grid. This reduction substantially decreases the CPU time required for the calculation while maintaining a satisfactory level of accuracy (with a low error on the Xe adsorption enthalpy of \SI{0.014}{\kilo\joule\per\mole}) compared to the naive grid approach, as shown in Table~\ref{tab:grid}. With the blocking procedure in the grid simulation, the time required is reduced by {70.6\%} when compared to the naive approach, and a similar reduction of {76.6\%} is observed for the symmetry-aware grid sampling. By combining both simplifications, the fast grid sampling technique achieves a time reduction of nearly {91.6\%} for a grid spacing of \SI{0.12}{\angstrom}, aligning with the aforementioned decreased number of sampled points.
 
 \begin{table}[ht]
   \centering
