--- a/remerciements.tex
+++ b/remerciements.tex
@@ -14,13 +14,13 @@
 \begingroup
 \itshape
 
-Je tiens tout d'abord à adresser mes plus sincères remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Magali \textsc{Benoit}, pour avoir pris le temps de lire, commenter et évaluer mon manuscrit de thèse. 
+Je tiens tout d'abord à adresser mes plus sincères remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Christelle \textsc{Miqueu}, pour avoir accepté de prendre le temps de lire, commenter et évaluer mon manuscrit de thèse. 
 % Leurs précieux commentaires et évaluations ont grandement enrichi mon travail. 
-J'adresse également mes plus sincères remerciements à la présidente du jury, NAME \textsc{SURNAME}, pour avoir présidé ma soutenance de thèse malgré ses nombreuses obligations.
+J'adresse également mes remerciements à la présidente du jury, Anne \textsc{Boutin}, pour avoir accepté d'examiner mes travaux et de présider ma soutenance de thèse malgré ses nombreuses obligations en tant que directrice de département de l'ENS.
 
-J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de faire partie du jury en tant que membres invités et représentants d'Orano. Je suis particulièrement reconnaissant envers Isabelle pour son implication dans l'encadrement de ma thèse, apportant toujours un regard bienveillant et pragmatique à mes travaux. 
+J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer à ma soutenance en tant que membres invités et représentants d'Orano. Je suis particulièrement reconnaissant envers Isabelle pour son implication dans l'encadrement de ma thèse, apportant toujours un regard bienveillant et pragmatique à mes travaux.
 
-Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chalheureusement sur le site du CEA Marcoule, même si les circonstances liées à la situation sanitaire ne m'ont pas permis de m'y rendre aussi souvent que prévu. Je suis également reconnaissant de ton encadrement scientifique éclairé de chimiste théoricien expérimenté, ainsi que pour tes conseils bienveillants dans mes démarches administratives avec le CEA, bien que ce ne soit pas ton rôle.
+Je remercie également Philippe \textsc{Guilbaud} pour m'avoir toujours accueilli chaleureusement sur le site du CEA Marcoule, même si les circonstances liées à la situation sanitaire ne m'ont pas permis de m'y rendre aussi souvent que prévu. Je suis également reconnaissant de ton encadrement scientifique éclairé de chimiste théoricien expérimenté, ainsi que pour tes conseils bienveillants dans mes démarches administratives avec le CEA, bien que ce ne soit pas ton rôle. Je suis très reconnaissant à Orano et au CEA pour leurs soutiens financiers et matériels à mon travail de recherche.
 
 Je tiens à exprimer ma profonde gratitude envers mon superviseur, François-Xavier \textsc{Coudert}, qui m'a ouvert les portes de son bureau et m'y a accueilli pendant plus de trois ans. Ses conseils bienveillants lors des moments de doute, assortis de remarques constructives, ont été inestimables. Au-delà de son expertise dans l'encadrement de projets scientifiques, il m'a également inspiré par sa passion pour la science et sa grande modestie. Je suis convaincu que ces qualités continueront de me guider tout au long de ma carrière.
 
@@ -90,20 +90,20 @@ Enfin, je voudrais exprimer ma profonde gratitude envers celle que j'aime, Dabee
 \begingroup
 \itshape
 
-First and foremost, I would like to express my gratitude to the rapporteurs of this thesis, Sof{\'{i}}a \textsc{Calero} and Magali \textsc{Benoit}, for taking the time to read, comment on, and evaluate my thesis manuscript. 
+First and foremost, I would like to express my gratitude to the referees of this thesis, Sof{\'{i}}a \textsc{Calero} and Christelle \textsc{Miqueu}, for accepting to take the time to read, comment on, and evaluate my thesis manuscript. 
 % Their valuable feedback and assessments have greatly enriched my work. 
-I also extend my sincere thanks to the chair of the jury, NAME SURNAME, for presiding over my thesis defense despite their numerous obligations.
+I also extend my sincere thanks to the chair of the jury, Anne \textsc{Boutin}, for accepting to review my PhD work and to preside over my thesis defense despite her numerous obligations as head of the Chemistry department at the ENS.
 
-I would also like to express my appreciation to Johann \textsc{William} and Isabelle \textsc{Hablot} for accepting to be part of the jury as invited members and representatives of Orano. I am particularly grateful to Isabelle for her involvement in supervising my thesis, always providing a supportive and pragmatic perspective on my work.
+I would also like to express my appreciation to Johann \textsc{William} and Isabelle \textsc{Hablot} for accepting to come as invited members and representatives of Orano. I am particularly grateful to Isabelle for her involvement in supervising my thesis, always providing a supportive and pragmatic perspective on my work.
 
-I would like to express my thanks to Philippe \textsc{Guilbaud} for warmly welcoming me to the CEA Marcoule site, even though I couldn't visit as often as planned due to the prevailing health situation. I am also grateful for his insightful scientific guidance as a theoretical chemist, and for his kind assistance with administrative matters related to the CEA, despite it not being his role.
+I would like to express my thanks to Philippe \textsc{Guilbaud} for warmly welcoming me to the CEA Marcoule site, even though I couldn't visit as often as planned due to the prevailing health situation. I am also grateful for his insightful scientific guidance as a theoretical chemist, and for his kind assistance with administrative matters related to the CEA, despite it not being his role. I am also very grateful to Orano and the CEA for their continuous financial and material support to my research work.
 
 I am sincerely grateful to my supervisor, François-Xavier \textsc{Coudert}, who opened the doors of his office to me and has welcomed me for over three years now. He has consistently provided me with benevolent advice during moments of doubt, always offering highly constructive feedback. His supervision of scientific projects is accompanied by his enthusiasm, and his continuous dedication is evident in his personal collaborations and research endeavors. His passion for science and his humility have greatly inspired me and will, I hope, continue to do so throughout my career.
 
 I would also like to extend my gratitude to the fellow doctoral students whom I have had the pleasure of meeting and with whom I have shared enjoyable moments, both in and outside the office: 
 Nicolas \textsc{Castel}, who embarked on his three-year journey of doctoral research alongside me. Thank you for being my co-office mate and also my companion for post-work outings and drinks.
 Wenke \textsc{Li}, who was in the final year of her Ph.D. when I joined and whom I already knew from my internship. Thank you for your good humor, generosity, and altruism.
-Maxime \textsc{Ducamp}, , who was starting his last two years of Ph.D. with us and whose early mornings have always amazed me. I try to draw inspiration from it, but I think my average is still around 11 a.m. Thank you for the administrative advice regarding the Ph.D. (your planning for the thesis comitee was very useful).
+Maxime \textsc{Ducamp}, who was starting his last two years of Ph.D. with us and whose early mornings have always amazed me. I try to draw inspiration from it, but I think my average is still around 11 a.m. Thank you for the administrative advice regarding the Ph.D. (your planning for the thesis committee was very useful).
 Lionel \textsc{Zoubritzky}, who joined our big family of doctoral students at the beginning of my second year and whose Master's work on the topology of nanoporous materials already intrigued me. Thank you for our numerous discussions on my algorithmic problems, you might be the only person I don't bore with that.
 Dune \textsc{André}, who joined us for my final year, and whom I would have liked to get to know better. Thank you for your good humor and for introducing me to French cinema during our movie outings, I should confess I am still a bit clueless.
 
@@ -121,7 +121,7 @@ Siwar \textsc{Chibani}, for our discussions on the intricacies of an academic ca
 
 \todo{Friends}
 
-Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love and I am immensely grateful.
+Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love, and I am immensely grateful.
 
 \endgroup
 
