--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,17 @@
+@article{Hughes2019,
+  keywords = {previous},
+  doi = {10.1002/jcc.26111},
+  url = {https://doi.org/10.1002/jcc.26111},
+  year = {2019},
+  month = nov,
+  publisher = {Wiley},
+  volume = {41},
+  number = {7},
+  pages = {619--628},
+  author = {Zak E. Hughes and Emmanuel Ren and Joseph C. R. Thacker and Benjamin C. B. Symons and Arnaldo F. Silva and Paul L. A. Popelier},
+  title = {A {FFLUX} Water Model: Flexible,  Polarizable and with a Multipolar Description of Electrostatics},
+  journal = {Journal of Computational Chemistry}
+}
 @article{Ren_2021,
   keywords = {published},
   title={Thermodynamic exploration of xenon/krypton separation based on a high-throughput screening},
