--- a/publist.tex
+++ b/publist.tex
@@ -57,7 +57,8 @@
 
             \section*{Preprint}
             \printbibliography[heading=none,type=article,env=publist,keyword={preprint}]
-            
+            \section*{Publication from a previous project}
+            \printbibliography[heading=none,type=article,env=publist,keyword={previous}]
         \end{refcontext}
     \end{refsection}
 
