--- a/remerciements.tex
+++ b/remerciements.tex
@@ -31,7 +31,7 @@ Maxime \textsc{Ducamp}, qui entamait ses deux dernières années de thèse avec 
 Lionel \textsc{Zoubritzky}, qui a rejoint notre grande famille des doctorants au début de ma deuxième année et dont les travaux sur la topologie des matériaux nanoporous m'ont toujours intrigué. Merci pour nos nombreuses discussions sur mes problèmes algorithmiques, tu es peut-être la seule personne avec qui je peux en discuter sans t'ennuyer !
 Dune \textsc{André}, qui nous a rejoints pour ma dernière année et avec qui j'aurais aimé passer plus de temps. Merci pour ta bonne humeur et de m'avoir fait découvrir le septième art français, moi qui suis plutôt inculte dans ce domaine.
 
-J'aimerais également remercier les postdoctorants avec qui j'ai pu échanger lors des pauses déjeuner et café :
+J'aimerais également remercier les postdoctorants avec qui j'ai pu longuement échanger lors des pauses déjeuner et café :
 Clément \textsc{Wespiser}, pour le verre que nous a payé à ton pot de départ avant que tu ne rejoignes le CEA.
 Ambroise \textsc{De Izarra}, pour nos discussions sur RASPA2. Bravo pour tes articles, ce n'était pas évident de coder dans RASPA2 !
 Luca \textsc{Brugnoli}, pour partager ta passion pour les livres et les films de science-fiction. 
@@ -107,7 +107,7 @@ Maxime \textsc{Ducamp}, who was starting his last two years of Ph.D. with us and
 Lionel \textsc{Zoubritzky}, who joined our big family of doctoral students at the beginning of my second year and whose Master's work on the topology of nanoporous materials already intrigued me. Thank you for our numerous discussions on my algorithmic problems, you might be the only person I don't bore with that.
 Dune \textsc{André}, who joined us for my final year, and whom I would have liked to get to know better. Thank you for your good humor and for introducing me to French cinema during our movie outings, I should confess I am still a bit clueless.
 
-I would also like to thank the postdoctoral researchers with whom I had lengthy discussions during lunch and coffee breaks:
+I would also like to thank the postdoctoral researchers with whom I had long and interesting discussions during lunch and coffee breaks:
 Clément \textsc{Wespiser}, for the drinks and dinner we had before you joined CEA.
 Ambroise \textsc{De Izarra}, for our discussions on RASPA2 (congratulations on your papers; coding in RASPA2 was not easy).
 Luca \textsc{Brugnoli}, for sharing your passion for science fiction books and films.
