--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -718,6 +718,11 @@ By using a thermodynamic approach to describe the separation selectivity, the di
 
 For instance, the essentially enthalpic nature of the xenon/krypton separation process underscores the importance of developing more efficient methods for sampling interaction energies and utilizing them as cost-effective descriptors for analyzing an increasing number of structures. In the subsequent chapter, different approaches for evaluating adsorption enthalpy will be explored, considering the computation time required and the accuracy of each method. Additionally, the influence of partial pressure, manifested through changes in composition or pressure, raises questions about the potential use of infinite dilution thermodynamic quantities to predict selectivity at any pressure (GCMC). Numerous studies have focused on predicting GCMC simulations.\autocite{Simon_2015,Shi_2023,Kang_2023,Li_2023}. The thermodynamics-based approach combined with characterizing pore diversity holds the potential to yield improved results in predicting GCMC values of selectivity, contributing to a more comprehensive understanding of adsorption processes in nanoporous materials.
 
+\begin{center}
+    \pgfornament[width=6cm,color=CTsemi]{88}
+\end{center}
+
+In the next chapter, I will introduce more efficient computational tools for calculating the adsorption heat, Henry constants and selectivity at infinite dilution. These quantities can accelerate the current high-throughput screening methodologies by bringing insight on the thermodynamic performance of gas separation process in nanoporous materials.
 
 \OnlyInSubfile{\printglobalbibliography}
 
