--- a/4-ml.tex
+++ b/4-ml.tex
@@ -628,7 +628,9 @@ The final ML model could be used in a well-designed workflow to find the best pe
 %% Drawbacks + perspectives
 The ambition of this study was to introduce new descriptor ideas that contribute to the development of increasingly efficient screening methodologies for identifying optimal materials for specific applications. However, similar to other studies in this field, the simulations in this study relied on a set of strong assumptions, wherein rigid frameworks and non-polarized classical forcefields were employed. Previous literature suggested that the most selective materials were designed and synthesized  for Xe/Kr separation based on the effect of open-metal sites, leveraging the difference in polarizability between the two molecules to achieve efficient separation.\autocite{Li_2019, Pei_2022} Moreover, the flexibility of structures could be achieved by employing flexible forcefields with appropriate simulation methodologies\autocite{Bousquet2012} or by conducting multiple rigid simulations using snapshots from NPT simulations\autocite{Witman_2017}. The simulations could be enhanced at the cost of CPU time by coupling them with a reduction in simulation time, such as the one presented in this chapter. The pursuit of ever-faster evaluation tools enabled the exploration of more complex properties and the discovery of structures with increasingly relevant characteristics. Further discussion on these potential improvements will be presented in greater detail in Chapter 6.
 
-\vspace{1cm}
+\begin{center}
+    \pgfornament[width=6cm,color=CTsemi]{88}
+\end{center}
 
 The next chapter will focus on another shortcoming of the simple thermodynamic approach, namely the consideration of kinetic limitations in the screening process. In the problem of adsorbent-material separation, the transport effect does not play a key role in evaluating the separation performance of the material. Instead, it serves as a constraint that could potentially affect the performance of some seemingly top materials. Various methodologies will be examined to incorporate these transport properties, which are computationally demanding and challenging to obtain experimentally.
 
