--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -658,6 +658,10 @@ To expand beyond conventional studies, the diffusion coefficient could be used t
 
 The diffusion coefficients calculated using the aforementioned methodologies solely describe self-diffusion in an infinitely diluted environment. To better describe transport properties in industrial conditions, it will be necessary, in the future, to study diffusion coefficients in a higher loading environment to account for host--host interactions. Furthermore, mixture simulations can be directly conducted to obtain the so-called Onsager diffusion coefficients, which are based on the Maxwell-Stefan diffusion equation rather than Fick's equation.\autocite{Krishna_2008} The calculation of such quantities requires significant computational resources, as MD simulations on mixtures at relatively high loading must be run for a sufficiently long duration to capture the diffusion regime. Therefore, applying this approach to large-scale screening is impractical, but some interesting materials can be tested to study the effects of mixtures and loading on transport properties.
 
+\begin{center}
+    \pgfornament[width=6cm,color=CTsemi]{88}
+\end{center}
+
 This chapter presented a particular aspect that is often not considered in standard high-throughput screenings for xenon/krypton separation, namely transport properties. The subsequent chapter will detail some of the other factors that can contribute to a more comprehensive picture, bringing it closer to experimental systems. The flexibility of the nanoporous framework, for instance, can impact adsorption performance.\autocite{Witman_2017} Additionally, the difference in polarizability between xenon and krypton can be better leveraged in the screening process if it can be modeled through the use of higher-level theories than the Lennard-Jones potential. Both the flexibility and polarization aspects are still under investigation, and although some results will be presented, the chapter mainly serves as a compilation of potential research focuses and solutions to enhance the current understanding.
 
 \OnlyInSubfile{\printglobalbibliography}
