--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -280,6 +280,11 @@ Since a portion of the induction energy is already incorporated into the Lennard
 
 By customizing this method for xenon/krypton separation, it may be possible to conduct screenings that yield materials comparable to ZJU-74a-Pd. Further optimization of the process can be achieved by narrowing down the materials' selection through restrictions on pore size and the presence of open metal sites within a database. Subsequently, the restricted material list can be evaluated using higher-level methods like the ones described in this chapter.
 
+\begin{center}
+  \pgfornament[width=6cm,color=CTsemi]{88}
+\end{center}
+
+This final chapter sets incoming objectives for improving the screening methods in the case of xenon/krypton separation. The flexibility of the structure and the effect of polarization energy can greatly influence the ranking of the best materials obtained by a high-throughput screening. Combined with the faster sampling techniques I developed in this PhD, these more complex phenomena could eventually be applied to large database with more research and development. 
 
 \OnlyInSubfile{\printglobalbibliography}
 
