--- a/cover.tex
+++ b/cover.tex
@@ -11,7 +11,7 @@
 \jurymember{1}{Anne \textsc{Boutin}}{Directrice de Recherche CNRS, ENS}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Full Professor, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Christelle \textsc{Miqueu}}{Maître de Conférences, Univ. de Pau \& Pays Adour}{Rapportrice}
-\jurymember{4}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Examinateur}
+\jurymember{4}{Philippe \textsc{Guilbaud}}{Directeur de Recherche et Chef de Laboratoire, CEA}{Examinateur}
 \jurymember{5}{François-Xavier \textsc{Coudert}}{Directeur de Recherche CNRS, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
