--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -171,7 +171,7 @@ This previous simulation can be considered as the most accurate one, but it is n
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_Xe_KAXQIL_clean_5fs.pdf}
-  \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_Xe_coeff_KAXQIL_clean_5fs.pdf}
+  \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_Xe_coeff_KAXQIL_clean_5fs.png}
 \caption{ On the left panel, the MSD in log-log scale and a fit to the relation $\text{MSD}(\tau) = K_\alpha\tau^\alpha$ using an MD simulation of a \SI{5}{\fs}-time step and 500 million steps are shown. A better linear fit is obtained with this new configuration of the MD simulation compared to Figure~\ref{fgr:MSD_init}, as more timescales are explored while utilizing the same computational resources. On the right panel, the MSD on the timescale of the diffusion regime is presented. The linear fit demonstrates improved performance compared to the previous Figure~\ref{fgr:MSD_linear_init}.}\label{fgr:MSD_5fs}
 \end{figure}
 
